--- a/TaflWeb/Views/GameBoard/CurrentBoard.cshtml
+++ b/TaflWeb/Views/GameBoard/CurrentBoard.cshtml
@@ -4,7 +4,7 @@
 }
 <head>
     <meta name="viewport" content="width=device-width" />
-    <script src="js/client.js"></script>
+    <script src="@Url.Content("~/js/client.js")"></script>
     <title>Board</title>
 </head>
 <body>
@@ -14,6 +14,9 @@
     </div>
     <div>
         <label id="jsonBoard"></label>
+    </div>
+    <div>
+        <canvas id="boardImage" width="800" height="800"></canvas>
     </div>
 </body>
 
