Selection highlighting started but not yet working

--- a/TaflWeb/Views/GameBoard/CurrentBoard.cshtml
+++ b/TaflWeb/Views/GameBoard/CurrentBoard.cshtml
@@ -14,12 +14,19 @@
     </div>
     <div>
         <label id="jsonBoard"></label>
-    </div>  
+    </div>
     <div>
         <label id="visualPattern"></label>
     </div>
     <div>
+        <ul>
+            <li id="clickColumn">Column:</li>
+            <li id="clickRow">Row:</li>
+        </ul>
+    </div>
+    <div>
         <canvas id="boardImage" width="800" height="800"></canvas>
     </div>
+
 </body>
 
