Starting on click cammands to api

--- a/TaflWeb/Views/GameBoard/CurrentBoard.cshtml
+++ b/TaflWeb/Views/GameBoard/CurrentBoard.cshtml
@@ -25,6 +25,13 @@
         </ul>
     </div>
     <div>
+        <ul>
+            <li id="turnStatus">Turn State:</li>
+            <li id="attackerIsAI">Attacker is AI:</li>
+            <li id="defenderIsAI">Defender is AI:</li>
+        </ul>
+    </div>
+    <div>
         <canvas id="boardImage" width="800" height="800"></canvas>
     </div>
 
