Click communication object trasfer

--- a/TaflWeb/Views/GameBoard/CurrentBoard.cshtml
+++ b/TaflWeb/Views/GameBoard/CurrentBoard.cshtml
@@ -32,6 +32,9 @@
         </ul>
     </div>
     <div>
+        <label id="lastResponse">Last response: </label>
+    </div>
+    <div>
         <canvas id="boardImage" width="800" height="800"></canvas>
     </div>
 
