Working basic - time to merge

--- a/TaflWeb/Views/GameBoard/CurrentBoard.cshtml
+++ b/TaflWeb/Views/GameBoard/CurrentBoard.cshtml
@@ -18,9 +18,10 @@
     <div>
         <ul>
             <li id="turnStatus">Turn State:</li>
-            <li id="attackerIsAI">Attacker is AI:</li>
-            <li id="defenderIsAI">Defender is AI:</li>
+            <li id="responseLabel">Response:</li>
         </ul>
+        <input type="checkbox" id="checkBoxAttackerIsAI">Attacker Is AI?<br>
+        <input type="checkbox" id="checkBoxDefenderIsAI">Defender Is AI?<br>
     </div>
     <div>
         <canvas id="boardImage" width="800" height="800"></canvas>
