Working basic game

--- a/TaflWeb/Views/GameBoard/CurrentBoard.cshtml
+++ b/TaflWeb/Views/GameBoard/CurrentBoard.cshtml
@@ -22,6 +22,7 @@
         </ul>
         <input type="checkbox" id="checkBoxAttackerIsAI">Attacker Is AI?<br>
         <input type="checkbox" id="checkBoxDefenderIsAI">Defender Is AI?<br>
+        <button class="button btn-sm btn-primary" id="resetButton">Reset</button>
     </div>
     <div>
         <canvas id="boardImage" width="800" height="800"></canvas>
