Move history tracking

--- a/TaflWeb/Views/GameBoard/CurrentBoard.cshtml
+++ b/TaflWeb/Views/GameBoard/CurrentBoard.cshtml
@@ -25,6 +25,9 @@
         <button class="button btn-sm btn-primary" id="resetButton">Reset</button>
     </div>
     <div>
+        <ul id="moveList"></ul>
+    </div>
+    <div>
         <canvas id="boardImage" width="800" height="800"></canvas>
     </div>
 
