End improvements for now - needs Tests

--- a/TaflWeb/Views/Home/Index.cshtml
+++ b/TaflWeb/Views/Home/Index.cshtml
@@ -4,16 +4,9 @@
 }
 <head>   
 </head>
-<h2>Index</h2>
 <div>
-    <h2>Get data</h2>
+    <h2>Game Selection</h2>
 </div>
-<form id="setForm" asp-action="SetString" asp-controller="Game" method="post">
-    <div class="form-group">
-        <input class="form-control" id="Text" name="Text" />
-        <button type="submit" class="button btn-sm btn-primary">Set</button>
-    </div>
-</form>
 <div>
     <a href="/GameBoard/CurrentBoard"> To Game Board</a>
 </div>
