--- a/TaflWeb/Views/Shared/_Layout.cshtml
+++ b/TaflWeb/Views/Shared/_Layout.cshtml
@@ -10,6 +10,14 @@
     <script src="~/lib/jQuery/dist/jquery.js"></script>
 </head>
 <body class="m-1 p-1">
+    <div class="container">
+        <div class="jumbotron">
+            <h1>TaflWeb</h1>
+            <p>
+                ASP.NET Core MVC version of the Viking boardgame Hnefatafl.
+            </p>
+        </div>
+    </div>
     @RenderBody()
 </body>
 </html>
