--- a/TaflWeb/Views/Shared/_Layout.cshtml
+++ b/TaflWeb/Views/Shared/_Layout.cshtml
@@ -12,11 +12,15 @@
 <body class="m-1 p-1">
     <div class="container">
         <div class="jumbotron d-flex align-items-center">
-            <h1>TaflWeb </h1>
-            <div>
-                <h3>
-                    ASP.NET Core MVC version of the Viking boardgame Hnefatafl.
-                </h3>
+            <div class="special_jumbo_pad">
+                <div>
+                    <h1>TaflWeb : </h1>
+                </div>
+                <div>
+                    <h3>
+                        ASP.NET Core MVC version of the Viking boardgame Hnefatafl.
+                    </h3>
+                </div>
             </div>
         </div>
     </div>
