Rules page added

--- a/TaflWeb/Views/GameBoard/CurrentBoard.cshtml
+++ b/TaflWeb/Views/GameBoard/CurrentBoard.cshtml
@@ -35,13 +35,25 @@
                     </ul>
                     <br />
                     <h3>AI Control</h3>
-                    <br />                    
-                    <input type="checkbox" id="checkBoxAttackerIsAI">Attacker Is AI?<br>
-                    <input type="checkbox" id="checkBoxDefenderIsAI">Defender Is AI?<br>
+                    <br />  
+                    <table>
+                        <tr>
+                            <td>
+                                <input type="checkbox" id="checkBoxAttackerIsAI">Attacker Is AI?<br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <input type="checkbox" id="checkBoxDefenderIsAI">Defender Is AI?<br>
+                            </td>
+                        </tr>
+                    </table>
+                    
+
                     <br />
                     <h3>Controls</h3>
                     <br />
-                    <button class="button btn-sm btn-secondary" id="resetButton">Reset</button>
+                    <button class="button btn-secondary" id="resetButton">Reset</button>
                 </div>
                 <br />
                 <div class="dropdown">
