--- a/TaflWeb/Views/Home/Index.cshtml
+++ b/TaflWeb/Views/Home/Index.cshtml
@@ -4,9 +4,24 @@
 }
 <head>   
 </head>
-<div>
-    <h2>Game Selection</h2>
-</div>
-<div>
-    <a href="/GameBoard/CurrentBoard"> To Game Board</a>
-</div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm">
+            <h2>Home</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm">
+            <div>
+                <a href="/GameBoard/CurrentBoard">To Game Board</a>
+                <br />
+                <a href="/Rules/Rules">Read the rules</a>
+                <br />
+                <img src="~/Images/shield.jpg" />
+            </div>
+        </div>
+    </div>
+    </div>
+
+
+
