Trying to rotate thinking image

--- a/TaflWeb/Views/GameBoard/CurrentBoard.cshtml
+++ b/TaflWeb/Views/GameBoard/CurrentBoard.cshtml
@@ -41,6 +41,9 @@
                             <td>
                                 <input type="checkbox" id="checkBoxAttackerIsAI">Attacker Is AI?<br>
                             </td>
+                            <td rowspan="2">
+                                <img id="thinkingImage" class="centerImage" src="~/Images/shield.jpg" width=100 />
+                            </td>
                         </tr>
                         <tr>
                             <td>
