--- a/TaflWeb/Views/Home/Index.cshtml
+++ b/TaflWeb/Views/Home/Index.cshtml
@@ -17,7 +17,9 @@
                 <br />
                 <a href="/Rules/Rules">Read the rules</a>
                 <br />
-                <img src="~/Images/shield.jpg" />
+                <div>
+                    <img  class="centerImage" src="~/Images/shield.jpg" />
+                </div>
             </div>
         </div>
     </div>
